tests/cases/structs/errors/union-by-nested-selector-inference-conflict.ari
enum CipherType {
  stream,
  block,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct StreamPayload {
  value: i64,
}

struct BlockPayload {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  header: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
  body: union by security.cipher_type {
    stream => StreamPayload,
    block => BlockPayload,
  },
}

fn main() -> i64 {
  let packet = TLSCiphertext {
    header: stream => StreamPayload { value: 1 },
    body: block => BlockPayload { value: 2 },
  };
  return 0;
}
